pom.xml properties, injection strategies